<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Newapp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_change_username">ChangeUsername</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_choose_password">Choose a password</string>
    <string name="hint_confirm_password">Re-enter password</string>
    <string name="welcome">Welcome to New App</string>
    <string name="welcome_new">Welcome</string>
    <string name="new_user">I am a new user</string>
    <string name="login">Login</string>
    <string name="email">Email-id</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Please register !!</string>
    <string name="profile">Profile setings</string>
    <string name="log_out">Log out</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change_un">Change Username</string>
    <string name="change_pwd">Change Password</string>
    <string name="old_username">Old Username</string>
    <string name="new_username">New Username</string>
    <string name="changes">Time for some changes</string>
    <string name="regusers">Registered Users</string>
    <string name="title_activity_registered_users">RegisteredUsers</string>
    <string name="waether_head">Your Current weather is:</string>
    <string name="title_activity_camera">Camera</string>
    <string name="hello_world">Hello world!</string>

</resources>