<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePassword" >

    <TextView
        android:id="@+id/title_change_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/changes" />

    <EditText
        android:id="@+id/oldpasswordtochange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title_change_pwd"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/giveanewpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/oldpasswordtochange"
        android:ems="10"
        android:hint="@string/hint_choose_password"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newpasswordagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/giveanewpassword"
        android:ems="10"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/dunkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/newpasswordagain"
        android:textColor="@drawable/button"
        android:text="@string/ok" />

    <Button
        android:id="@+id/dont_changepassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dunkin"
        android:layout_alignBottom="@+id/dunkin"
        android:layout_alignParentRight="true"
        android:textColor="@drawable/button"
        android:text="@string/cancel" />

</RelativeLayout>
