<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Welcome" >

    <TextView
        android:id="@+id/welcome_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_new" />

    <Button
        android:id="@+id/regusers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textColor="@drawable/button"
        android:text="@string/regusers" />

    <ImageView
        android:id="@+id/photo_big"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/welcome_new"
        android:layout_centerHorizontal="true"
        android:contentDescription="photo"
        android:src="@android:drawable/alert_light_frame" />

    <TextView
        android:id="@+id/weather_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/photo_big"
        android:text="@string/waether_head" />

    <TextView
        android:id="@+id/weather_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/weather_head"
        android:text="not available" />

    <ImageButton
        android:id="@+id/weather_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/weather_head"
        android:contentDescription="Refresh"
        android:src="@android:drawable/stat_notify_sync" />

</RelativeLayout>